<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>tfagaming.projects.minecraft.homestead</groupId>
	<artifactId>homestead</artifactId>
	<version>5.1.0.1</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<maven.compiler.release>21</maven.compiler.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<repositories>
		<!--
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>
		-->
		<repository>
			<id>papermc</id>
			<url>https://repo.papermc.io/repository/maven-public/</url>
		</repository>
		<repository>
			<id>codemc-creatorfromhell</id>
			<url>https://repo.codemc.io/repository/creatorfromhell/</url>
		</repository>
        <repository>
            <id>enginehub</id>
            <url>https://maven.enginehub.org/repo/</url>
        </repository>
		<repository>
			<id>sk89q-repo</id>
			<url>https://maven.enginehub.org/repo/</url>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
		<repository>
			<id>placeholderapi</id>
			<url>https://repo.extendedclip.com/releases/</url>
		</repository>
		<repository>
			<id>bluecolored</id>
			<url>https://repo.bluecolored.de/releases</url>
		</repository>
		<repository>
			<id>MikeRepo</id>
			<url>https://repo.mikeprimm.com/</url>
		</repository>
		<repository>
			<id>modrinth-repo</id>
			<url>https://api.modrinth.com/maven/</url>
		</repository>
		<repository>
			<id>minecraft-libraries</id>
			<name>Minecraft Libraries</name>
			<url>https://libraries.minecraft.net</url>
		</repository>
		<repository>
			<id>EldoNexus</id>
			<url>https://eldonexus.de/repository/maven-releases/</url>
		</repository>
		<repository>
			<id>william278.net</id>
			<url>https://repo.william278.net/releases</url>
		</repository>
		<repository>
			<id>thenextlvl-releases</id>
			<name>TheNextLvl</name>
			<url>https://repo.thenextlvl.net/releases</url>
		</repository>
		<repository>
			<id>nexomc-releases</id>
			<url>https://repo.nexomc.com/releases/</url>
		</repository>
	</repositories>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.mongodb</groupId>
				<artifactId>mongodb-driver-bom</artifactId>
				<version>5.6.3</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
            <dependency>
                <groupId>com.intellectualsites.bom</groupId>
                <artifactId>bom-newest</artifactId>
                <version>1.56</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>

		<!--
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.21.9-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		-->

		<dependency>
			<groupId>io.papermc.paper</groupId>
			<artifactId>paper-api</artifactId>
			<version>1.21.9-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.github.MilkBowl</groupId>
			<artifactId>VaultAPI</artifactId>
			<version>1.7</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>net.milkbowl.vault</groupId>
			<artifactId>VaultUnlockedAPI</artifactId>
			<version>2.16</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.18.0</version>
		</dependency>

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.7.7</version>
		</dependency>

		<dependency>
			<groupId>org.mongodb</groupId>
			<artifactId>mongodb-driver-sync</artifactId>
		</dependency>

		<dependency>
			<groupId>org.mariadb.jdbc</groupId>
			<artifactId>mariadb-java-client</artifactId>
			<version>3.5.6</version>
		</dependency>

		<dependency>
			<groupId>de.bluecolored</groupId>
			<artifactId>bluemap-api</artifactId>
			<version>2.7.6</version>
			<scope>provided</scope>
		</dependency>

		<!-- BMUtils (Cheese) -->
		<dependency>
			<groupId>com.technicjelle</groupId>
			<artifactId>BMUtils</artifactId>
			<version>5.0.1</version>
			<scope>compile</scope>
			<exclusions>

				<exclusion>
					<groupId>com.flowpowered</groupId>
					<artifactId>flow-math</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>com.flowpowered</groupId>
			<artifactId>flow-math</artifactId>
			<version>1.0.3</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>us.dynmap</groupId>
			<artifactId>DynmapCoreAPI</artifactId>
			<version>3.7-beta-6</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>maven.modrinth</groupId>
			<artifactId>pl3xmap</artifactId>
			<version>1.21.4-512</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>xyz.jpenilla</groupId>
			<artifactId>squaremap-api</artifactId>
			<version>1.3.4</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.github.GriefPrevention</groupId>
			<artifactId>GriefPrevention</artifactId>
			<version>16.18.2</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>biz.princeps</groupId>
			<artifactId>landlord-api</artifactId>
			<version>4.365</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.cjburkey.claimchunk</groupId>
			<artifactId>claimchunk</artifactId>
			<version>0.0.25-FIX3</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>me.clip</groupId>
			<artifactId>placeholderapi</artifactId>
			<version>2.11.6</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>me.lucko</groupId>
			<artifactId>commodore</artifactId>
			<version>2.2</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>com.sk89q.worldedit</groupId>
			<artifactId>worldedit-bukkit</artifactId>
			<version>7.3.10</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.sk89q.worldguard</groupId>
			<artifactId>worldguard-bukkit</artifactId>
			<version>7.0.9</version>
			<scope>provided</scope>
		</dependency>

        <dependency>
            <groupId>com.fastasyncworldedit</groupId>
            <artifactId>FastAsyncWorldEdit-Core</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.fastasyncworldedit</groupId>
            <artifactId>FastAsyncWorldEdit-Bukkit</artifactId>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <artifactId>FastAsyncWorldEdit-Core</artifactId>
                    <groupId>*</groupId>
                </exclusion>
            </exclusions>
        </dependency>

		<dependency>
			<groupId>com.github.angeschossen</groupId>
			<artifactId>LandsAPI</artifactId>
			<version>5.27.2</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>net.william278.huskclaims</groupId>
			<artifactId>huskclaims-bukkit</artifactId>
			<version>1.5.10</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>dev.faststats.metrics</groupId>
			<artifactId>bukkit</artifactId>
			<version>0.16.0</version>
		</dependency>

		<dependency>
			<groupId>com.nexomc</groupId>
			<artifactId>nexo</artifactId>
			<version>1.21.0</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<groupId>dev.triumphteam</groupId>
					<artifactId>triumph-gui</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<!-- Java 21 compiler -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<release>21</release>
				</configuration>
			</plugin>

			<!-- Sources -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals><goal>jar-no-fork</goal></goals>
					</execution>
				</executions>
			</plugin>

			<!-- JavaDoc -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.5.0</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals><goal>jar</goal></goals>
					</execution>
				</executions>
			</plugin>

			<!-- Shade -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.5.1</version>
				<executions>
					<execution>
						<id>shade</id>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<createDependencyReducedPom>false</createDependencyReducedPom>
							<minimizeJar>false</minimizeJar>
							<shadedArtifactAttached>false</shadedArtifactAttached>

							<artifactSet>
								<excludes>
									<exclude>com.flowpowered:flow-math</exclude>
								</excludes>
							</artifactSet>

							<relocations>
								<relocation>
									<pattern>com.technicjelle.BMUtils</pattern>
									<shadedPattern>tfagaming.projects.minecraft.homestead.libs.bmutils</shadedPattern>
								</relocation>
								<relocation>
									<pattern>me.lucko.commodore</pattern>
									<shadedPattern>tfagaming.projects.minecraft.homestead.libs.commodore</shadedPattern>
								</relocation>
								<relocation>
									<pattern>dev.faststats</pattern>
									<shadedPattern>tfagaming.projects.minecraft.homestead.libs.faststats</shadedPattern>
								</relocation>
							</relocations>

							<transformers>
								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>tfagaming.projects.minecraft.homestead.Homestead</mainClass>
								</transformer>
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<id>api-jar</id>
						<phase>install</phase>
						<goals><goal>jar</goal></goals>
						<configuration>
							<classifier>api</classifier>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub Packages</name>
			<url>https://maven.pkg.github.com/TayebYassine/Homestead</url>
		</repository>
	</distributionManagement>
</project>
